# subsurface

./: .DEREK.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .mention-bot  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODINGSTYLE.md  CONTRIBUTING.md  CodingStyle  CodingStyle.md  Configure.mk  ENHANCEMENTS.md  INSTALL  INSTALL.md  Makefile  README  README.md  README_TESTING.md  Readme.testing  Readme.ubuntu  ReleaseNotes.txt  Rules.mk  Subsurface-mobile-android.pro  Subsurface-mobile.pro  SupportedDivecomputers.html  SupportedDivecomputers.txt  TODO.CCR  TODO.md  android.cpp  callbacks-gtk.h  checkcloudconnection.cpp  checkcloudconnection.h  (+159 more)
cli/: CMakeLists.txt  commands.cpp  commands.h  config.cpp  config.h  dive_ref.cpp  dive_ref.h  json_serializer.cpp  json_serializer.h  main.cpp
commands/: CMakeLists.txt  command.cpp  command.h  command_base.cpp  command_base.h  command_device.cpp  command_device.h  command_divelist.cpp  command_divelist.h  command_divesite.cpp  command_divesite.h  command_edit.cpp  command_edit.h  command_edit_trip.cpp  command_edit_trip.h  command_event.cpp  command_event.h  command_filter.cpp  command_filter.h  command_pictures.cpp  command_pictures.h  command_private.cpp
core/: CMakeLists.txt  android.cpp  applicationstate.cpp  applicationstate.h  bluetoothaddress.cpp  bluetoothaddress.h  btdiscovery.cpp  btdiscovery.h  checkcloudconnection.cpp  checkcloudconnection.h  cli-downloader.cpp  cloudstorage.cpp  cloudstorage.h  cochran.c  cochran.cpp  cochran.h  color.cpp  color.h  compressibility.r  configuredivecomputer.cpp  configuredivecomputer.h  configuredivecomputerthreads.cpp  configuredivecomputerthreads.h  connectionlistmodel.cpp  connectionlistmodel.h  datatrak.c  datatrak.cpp  datatrak.h  deco.c  deco.cpp  deco.h  device.c  device.cpp  device.h  devicedetails.cpp  devicedetails.h  display.h  dive.c  dive.cpp  dive.h  (+253 more)
desktop-widgets/: CMakeLists.txt  about.cpp  about.h  about.ui  addfilterpreset.ui  btdeviceselectiondialog.cpp  btdeviceselectiondialog.h  btdeviceselectiondialog.ui  chartwidget.cpp  chartwidget.h  chartwidget.ui  command.cpp  command.h  command_base.cpp  command_base.h  command_divelist.cpp  command_divelist.h  command_divesite.cpp  command_divesite.h  command_edit.cpp  command_edit.h  command_edit_trip.cpp  command_private.cpp  command_private.h  configuredivecomputerdialog.cpp  configuredivecomputerdialog.h  configuredivecomputerdialog.ui  depthmapwidget.cpp  depthmapwidget.h  depthmapwidget.ui  divecomponentselection.cpp  divecomponentselection.h  divecomponentselection.ui  divecomputermanagementdialog.cpp  divecomputermanagementdialog.h  divecomputermanagementdialog.ui  divelistview.cpp  divelistview.h  divelogexportdialog.cpp  divelogexportdialog.h  (+121 more)
map-widget/: CMakeLists.txt  qmlmapwidgethelper.cpp  qmlmapwidgethelper.h
mobile-widgets/: CMakeLists.txt  qmlinterface.cpp  qmlinterface.h  qmlmanager.cpp  qmlmanager.h  qmlmapwidgethelper.cpp  qmlmapwidgethelper.h  qmlprefs.cpp  qmlprefs.h  qmlprofile.cpp  qmlprofile.h  statsmanager.cpp  statsmanager.h  themeinterface.cpp  themeinterface.h  uploadDiveLogsDE.cpp  uploadDiveLogsDE.h
profile-widget/: CMakeLists.txt  animationfunctions.cpp  animationfunctions.h  divecartesianaxis.cpp  divecartesianaxis.h  diveeventitem.cpp  diveeventitem.h  divehandler.cpp  divehandler.h  divelineitem.cpp  divelineitem.h  divepercentageitem.cpp  divepercentageitem.h  divepixmapcache.cpp  divepixmapcache.h  divepixmapitem.cpp  divepixmapitem.h  diveprofileitem.cpp  diveprofileitem.h  diverectitem.cpp  diverectitem.h  divetextitem.cpp  divetextitem.h  divetooltipitem.cpp  divetooltipitem.h  handleitem.cpp  handleitem.h  pictureitem.cpp  pictureitem.h  profilescene.cpp  profilescene.h  profiletranslations.h  profileview.cpp  profileview.h  profilewidget2.cpp  profilewidget2.h  qmlprofile.cpp  qmlprofile.h  ruleritem.cpp  ruleritem.h  (+5 more)
qt-models/: CMakeLists.txt  buddystatsmodel.cpp  buddystatsmodel.h  cleanertablemodel.cpp  cleanertablemodel.h  completionmodels.cpp  completionmodels.h  cylindermodel.cpp  cylindermodel.h  datestatsmodel.cpp  datestatsmodel.h  divecomputerextradatamodel.cpp  divecomputerextradatamodel.h  divecomputermodel.cpp  divecomputermodel.h  diveimportedmodel.cpp  diveimportedmodel.h  divelistmodel.cpp  divelistmodel.h  divelocationmodel.cpp  divelocationmodel.h  divepicturemodel.cpp  divepicturemodel.h  diveplannermodel.cpp  diveplannermodel.h  diveplotdatamodel.cpp  diveplotdatamodel.h  divesiteimportmodel.cpp  divesiteimportmodel.h  divesitepicturesmodel.cpp  divesitepicturesmodel.h  divesummarymodel.cpp  divesummarymodel.h  divetripmodel.cpp  divetripmodel.h  filterconstraintmodel.cpp  filterconstraintmodel.h  filtermodels.cpp  filtermodels.h  filterpresetmodel.cpp  (+39 more)
qt-quick/: CMakeLists.txt  chartitem.cpp  chartitem.h  chartitem_private.h  chartitem_ptr.h  chartitemhelper.h  chartview.cpp  chartview.h
qt-ui/: CMakeLists.txt  about.cpp  about.h  about.ui  addcylinderdialog.cpp  addcylinderdialog.h  addcylinderdialog.ui  addweightsystemdialog.cpp  addweightsystemdialog.h  addweightsystemdialog.ui  btdeviceselectiondialog.cpp  btdeviceselectiondialog.h  btdeviceselectiondialog.ui  common.h  completionmodels.cpp  completionmodels.h  configuredivecomputer.cpp  configuredivecomputer.h  configuredivecomputerdialog.cpp  configuredivecomputerdialog.h  configuredivecomputerdialog.ui  configuredivecomputerthreads.cpp  configuredivecomputerthreads.h  csvimportdialog.cpp  csvimportdialog.h  csvimportdialog.ui  devicedetails.cpp  devicedetails.h  divecomponentselection.ui  divecomputermanagementdialog.cpp  divecomputermanagementdialog.h  divecomputermanagementdialog.ui  divelistview.cpp  divelistview.h  divelogexportdialog.cpp  divelogexportdialog.h  divelogexportdialog.ui  divelogimportdialog.cpp  divelogimportdialog.h  divelogimportdialog.ui  (+100 more)
smtk-import/: CMakeLists.txt  smartrak.c  smartrak.cpp  smrtk2ssrfc_window.cpp  smrtk2ssrfc_window.h  smrtk2ssrfc_window.ui  smtk2ssrf.desktop  smtk_standalone.cpp
(+1407 files in other folders)
